Delete PermGen options - useless for JDK8